# GitCommitAssistant

./: .env.example  .gitignore  CONTRIBUTING.md  GitCommitAssistant.py  README.md  pyproject.toml  repo_names.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/gca/: __init__.py  __main__.py  cli.py  coauthored.py  commits.py  config.py  discussions.py  git_ops.py  github_api.py  prs.py  quickdraw.py  repo_spec.py  utils.py
src/gca/data/: commit_messages.txt
temp_repos/unit-testing/: README.md  commit_log.txt
tests/: conftest.py  test_coauthored.py  test_commits_flow.py  test_dates.py  test_default_branch.py  test_git_ops.py  test_github_api.py  test_live_smoke.py  test_rate_limit.py  test_repo_names.py
